Atualização Projeto feira 303

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
        <a href="https://www.tnc.org.br/">Tnc</a>
     </div>
    
-    <p>© 2025 Feira de Ciências do IEMA Pleno Newton Bello | Projeto Vida Marinha 303 </p> <br> <p>by: luis gustavo - 303</p>
+    <p>© 2025 Feira de Ciências do IEMA Pleno Newton Bello | Projeto Vida Marinha 303 </p> <br> <p>by: Turma - 303</p>
   </footer>
 
   <script>
