--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 <section id="curiosidades">
   <section id="cards-conscientizacao"></section>
-  <h2>Curiosidades</h2>
+  <h2 id="curiosidades-titulo">Curiosidades</h2>
   <div class="container-curiosidades">
  <div class="container-curiosidades">
   <div class="cards-container">
@@ -190,14 +190,14 @@
 
   <section class="game-section rellax" data-rellax-speed="2">
   <div class="conteudo-jogo">
-    <h2>Nosso Jogo Educativo</h2>
+    <h2>Ocean Guards</h2>
     <div class="game-content">
       <div class="game-texto">
-        <p>Explore a vida marinha e aprenda sobre a preservação de forma divertida e interativa!</p>
-        <a href="https://poki.com/br/g/ocean" target="_blank">Ir para o Jogo</a>
+        <p>Conheça o jogo desenvolvido pela Turma 101 com o apoio do professor João Victor Mondego. Explore a vida marinha e aprenda sobre a preservação de forma divertida e interativa!</p>
+       <!--<a href="https://poki.com/br/g/ocean" target="_blank">Ir para o Jogo</a>--> 
       </div>
       <div class="game-video">
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/rHakqapDS44" title="Jogo Educativo" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/pn0lNnP59TI?si=e6EVGBuWeWcXJqqZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
     </div>
   </div>
@@ -213,7 +213,7 @@
        <a href="https://www.tnc.org.br/">Tnc</a>
     </div>
    
-    <p>© 2025 Feira de Ciências do IEMA Pleno Newton Bello | Projeto Vida Marinha 303 </p> <br> <p>by: Turma - 303</p>
+    <p>© 2025 Feira de Ciências do IEMA Pleno Newton Bello | Projeto Vida Marinha 303 </p> <br> <p>Turma - 303</p>
   </footer>
 
   <script>
